[gd_scene load_steps=4 format=3 uid="uid://byqb7llo22v8f"]

[ext_resource type="Script" path="res://Objects/pumpkinPlant.gd" id="1_liw3x"]
[ext_resource type="Texture2D" uid="uid://bom6rgqmqegu3" path="res://Assets/Crop_Spritesheet.png" id="2_0t8of"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lomiq"]
radius = 12.0

[node name="pumpkinPlant" type="Area2D"]
script = ExtResource("1_liw3x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lomiq")

[node name="plant" type="Sprite2D" parent="."]
texture = ExtResource("2_0t8of")
hframes = 12
vframes = 10
frame = 101

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="plantEntered"]
[connection signal="body_exited" from="." to="." method="plantExited"]
[connection signal="timeout" from="Timer" to="." method="goToNextStage"]
